[package]
name = "wolfssl-sys"
version = "0.1.5"
edition = "2021"
authors = ["pete.m@expressvpn.com"]
license = "GPL-2.0"
readme = "README.md"
description = "System bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-sys"
keywords = ["wolfssl", "vpn", "expressvpn", "lightway"]
links = "wolfssl"

[build-dependencies]
bindgen = "0.60.1"
autotools = "0.2"
build-target = "0.4.0"
