[package]
name = "wolfssl-sys"
version = "0.1.15"
edition = "2021"
authors = ["pete.m@expressvpn.com"]
license = "GPL-2.0"
readme = "README.md"
description = "System bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-sys"
keywords = ["wolfssl", "vpn", "lightway", "post-quantum", "cryptography"]
links = "wolfssl"

[build-dependencies]
bindgen = "0.65"
autotools = "0.2"
build-target = "0.4.0"

[dependencies.oqs-sys]
git = "https://github.com/open-quantum-safe/liboqs-rust"
rev = "f7bd5038018f2d69c55b642fcc373ae445ac378a"
default-features = false
features = ["kems", "sigs"]
optional = true

[features]
default = []
debug = []
postquantum = ["dep:oqs-sys"]


[package.metadata.cargo-all-features]
# Not an actual feature
denylist = ["oqs-sys"]

[[example]]
name = "connect_pq"
required-features = ["postquantum"]
